--- a/SensorReader/src/main/res/values/strings.xml
+++ b/SensorReader/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <string name="app_name">USensor</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="moment">One Moment (hopefully)</string>
     <string name="action_settings">Settings</string>
     <string name="button_start">Start SW</string>
     <string name="button_stop">Stop SW</string>
+    <string name="title_activity_details">DetailsActivity</string>
+    <string name="space" />
 
 </resources>
